--- a/PensioenSysteem.Application.Deelnemer/packages.config
+++ b/PensioenSysteem.Application.Deelnemer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Dapper" version="1.42.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" userInstalled="true" />
@@ -10,5 +11,7 @@
   <package id="RabbitMQ.Client" version="3.5.2" targetFramework="net45" userInstalled="true" />
   <package id="Swashbuckle" version="5.1.5" targetFramework="net45" userInstalled="true" />
   <package id="Swashbuckle.Core" version="5.1.5" targetFramework="net45" userInstalled="true" />
+  <package id="Unity" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.0" targetFramework="net45" userInstalled="true" />
 </packages>
