Added HTTP access for RavenDB

--- a/PensioenSysteem.Application.Correspondentie/PensioenSysteem.Application.Correspondentie.csproj
+++ b/PensioenSysteem.Application.Correspondentie/PensioenSysteem.Application.Correspondentie.csproj
@@ -115,6 +115,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Raven.Studio.Html5.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\Logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
