--- a/PensioenSysteem.Application.Correspondentie/App.config
+++ b/PensioenSysteem.Application.Correspondentie/App.config
@@ -3,12 +3,10 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <connectionStrings>
-    <add name="Correspondentie" connectionString="Data Source=.\sqlexpress;Initial Catalog=Correspondentie;User ID=CorrespondentieUser;Password=S3cretP@$$w0rd" />
-  </connectionStrings>
   <appSettings>
     <add key="EventStoreFolder" value="d:\PensioenSysteem\EventStore" />
     <add key="PdfOutputFolder" value="D:\PensioenSysteem\Correspondentie" />
+    <add key="Raven/Port" value="9001"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
