--- a/PensioenSysteem.Application.ProcesManagers/App.config
+++ b/PensioenSysteem.Application.ProcesManagers/App.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="ProcesManagement" connectionString="Data Source=.\sqlexpress;Initial Catalog=ProcesManagement;User ID=ProcesManagementUser;Password=S3cretP@$$w0rd" />
-  </connectionStrings>
-
-  <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <appSettings>
+    <add key="Raven/Port" value="9000"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
