--- a/PensioenSysteem.UI.ArbeidsverhoudingBeheer/PensioenSysteem.UI.ArbeidsverhoudingBeheer.csproj
+++ b/PensioenSysteem.UI.ArbeidsverhoudingBeheer/PensioenSysteem.UI.ArbeidsverhoudingBeheer.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Arbeidsverhouding.cs" />
+    <Compile Include="ArbeidsverhoudingRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
