--- a/PensioenSysteem.UI.DeelnemerBeheer/PensioenSysteem.UI.DeelnemerBeheer.csproj
+++ b/PensioenSysteem.UI.DeelnemerBeheer/PensioenSysteem.UI.DeelnemerBeheer.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeelnemerRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +88,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Deelnemer.cs" />
+    <Compile Include="Model\Verhuizing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Verhuis.cs">
@@ -113,6 +115,9 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\PensioenSysteem.UI.DeelnemerBeheer.Model.Deelnemer.datasource" />
+    <None Include="Raven.Studio.Html5.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
