--- a/PensioenSysteem.UI.WerkgeverBeheer/packages.config
+++ b/PensioenSysteem.UI.WerkgeverBeheer/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net461" />
+  <package id="LiteDB" version="1.0.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" userInstalled="true" />
   <package id="RabbitMQ.Client" version="3.6.1" targetFramework="net45" userInstalled="true" />
-  <package id="RavenDB.Client" version="3.0.30115" targetFramework="net461" />
 </packages>
